@@ -44,7 +44,7 @@ char *alloca ();
 #endif
 #endif /* TRE_USE_ALLOCA */
 
-#include <assert.h>
+// #include <assert.h>
 #include <stdlib.h>
 #include <string.h>
 #ifdef HAVE_WCHAR_H
@@ -65,6 +65,15 @@ char *alloca ();
 #include "tre.h"
 #include "xmalloc.h"
 
+/* fake definition */
+extern void error(const char *str);
+#define assert(a) R_assert(a)
+
+static void assert(int expr)
+{
+    if(expr == 0)
+	error("internal error in TRE");
+}
 
 
 typedef struct {
