@@ -10,11 +10,22 @@
 #include <config.h>
 #endif /* HAVE_CONFIG_H */
 #include <stdlib.h>
-#include <assert.h>
+//#include <assert.h>
 
 #include "tre-internal.h"
 #include "tre-stack.h"
 #include "xmalloc.h"
+
+/* fake definition */
+extern void error(const char *str);
+#define assert(a) R_assert(a)
+
+static void assert(int expr)
+{
+    if(expr == 0)
+	error("internal error in TRE");
+}
+
 
 union tre_stack_item {
   void *voidptr_value;
